[project]
name = "couchdb-s3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.61",
    "botocore>=1.40.61",
    "fastapi>=0.120.1",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
